--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="#">https://drive.google.com/file/d/1uAR4t2pawSfTL0lKK825ArMNGanAlDb5/view?usp=sharing</a></p>
+						<p><a href="https://drive.google.com/file/d/1uAR4t2pawSfTL0lKK825ArMNGanAlDb5/view?usp=sharing"></a></p>
 					</div>
 				</div>
 
