--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
 						<div class="row justify-content-center mt-5">
 							<div class="col-md-6 text-center ftco-animate">
-								<p><a href="https://rxresu.me/ashish200221/ashish-pal-resume" class="btn btn-primary py-4 px-5">Download CV</a></p>
+								<p><a href="https://drive.google.com/file/d/1uAR4t2pawSfTL0lKK825ArMNGanAlDb5/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
 							</div>
 						</div>
 					</div>
